refactor: String.format to formatted and fix dumb ArgumentType thing